Sun Feb  3 18:37:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Added !NO_IDL3_TO_IDL2 to Bug_4087_Regression, invoking idl3_to_idl2
          means we need gcc which we don't have on all targets

Thu Jan 31 11:33:37 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          Fixed path 4087 test

Tue Jan 29 12:20:08 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/IDL3_to_IDL2/idl3_to_idl2_visitor.cpp:
          Fixed bugzilla 4087, thanks to
          Jiang Wei <jiangwei_1976 at yahoo dot com dot cn> for
          providing this patch

Tue Jan 29 12:17:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * tests/Bug_4087_Regression:
        * tests/Bug_4087_Regression/run_test.pl:
        * tests/Bug_4087_Regression/test.idl:
          New unit test for idl3_to_idl2, currently failing. Thanks to
          Jiang Wei <jiangwei_1976 at yahoo dot com dot cn> for
          creating this test.

Mon Jan 28 10:11:13 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * tests/Bug_4086_Regression/Bug_4086_Regression.mpc:
        * tests/Bug_4086_Regression/Foo.idl:
        * tests/Bug_4086_Regression/Foo_exec.h:
        * tests/Bug_4086_Regression/Foo_exec.cpp:
        * tests/Bug_4086_Regression/descriptors/DeploymentPlan.cdp:
        * tests/Bug_4086_Regression/descriptors/run_test.pl:
        * tests/Bug_4086_Regression/descriptors/run_test_cdr.pl:
          New test for components with attributes as part of
          supported interfaces. Thanks to Jiang Wei
          <jiangwei_1976 at yahoo dot com dot cn> for reporting this and
          providing the patch and unit test

Mon Jan 21 08:16:41 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          QueryCondition DDS tests are NDDS only

Thu Dec 27 09:19:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
